fix(Message): fix message state collapse when sender title is too long

--- a/src/components/Message/Message.css
+++ b/src/components/Message/Message.css
@@ -90,6 +90,10 @@
   align-items: baseline;
 }
 
+.state {
+  flex: 0 0 auto;
+}
+
 .sender {
   display: inline-block;
 }
